--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - ZOOKEEPER_CLIENT_PORT=32181
     ports:
       - "32181:32181"
+    networks:
+      - kafka-zoo
   kafka:
     image: confluentinc/cp-kafka:6.2.0
     environment:
@@ -17,6 +19,31 @@ services:
       - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
     ports:
       - "9092:9092"
+    networks:
+      - kafka-zoo
     restart: on-failure
     depends_on:
       - zookeeper
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    networks:
+      - mongo-net
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+
+networks:
+  kafka-zoo:
+    driver: bridge
+  mongo-net:
+    driver: bridge
